TopicServiceJPA: Change getAll() and get()